# event_automation

./: .gitignore  accounts.csv  contacts.csv  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  manage.py  pyproject.toml
accounts/: admin.py  models.py  urls.py  views.py
event_automation/: asgi.py  settings.py  urls.py  wsgi.py
events/: admin.py  models.py  urls.py  views.py
events/management/commands/: import_data.py
sales/: admin.py  models.py  urls.py  views.py
